
syntax = "proto3";

option java_package = "com.why.grpc.cloud.lib";

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

service Greeter {
    rpc SayHello(HelloRequest) returns(HelloReply){}
}